--- a/src/components/Country/Country.css
+++ b/src/components/Country/Country.css
@@ -1,4 +1,9 @@
+.country-container{
+    border: 1px solid goldenrod;
+    margin: 10px;
+    padding: 10px;
 
+}
 .country-container img{
     width:100px;
 }
